# cortex

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TASKS.md  agentic.md  agentic_new.md  arc.md  install.ps1  install.sh  poem.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_request.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
conductor/: bare-tool-tags.md  fix-agents-display.md  fix-stuck-and-streaming.md  improve-ddg-parser.md  phantom-assistant-fix.md  responsive-agents-grid.md  task-management-general.md  task-management-plan.md
cortex-output/creer-un-petite-app-en-go-qui-affiche-just-hello-world-dans-le-terminal/: architecture.md  specs.md
cortex-output/creer-un-petite-app-en-go-qui-affiche-just-hello-world-dans-le-terminal/src/: main.rs
cortex-output/fait-une-petite-hello-word-en-go/: architecture.md  specs.md
product-development/current-feature/: PRD.md
site/: docs.css  docs.html  hero-bg.jsx  index.html  landing-sections.jsx  landing.css  styles.css  tui-demo.css  tui-demo.jsx  tweaks-panel.jsx
src/: agent_bus.rs  agent_loader.rs  assistant.rs  auth.rs  config.rs  custom_defs.rs  main.rs  mentions.rs  orchestrator.rs  project_context.rs  repl.rs  skills.rs  updater.rs
src/context/: compressor.rs  mod.rs
src/providers/: bedrock.rs  custom_http.rs  groq.rs  mod.rs  models.rs  ollama.rs  openrouter.rs  registry.rs  together.rs
src/tools/: email.rs  filesystem.rs  mod.rs  terminal.rs  web_search.rs
src/tui/: events.rs  layout.rs  mod.rs  theme.rs
src/tui/widgets/: agent_panel.rs  diff_viewer.rs  input.rs  launcher.rs  logs.rs  mod.rs  picker.rs  pipeline.rs  status_bar.rs  summary.rs  tasks.rs
src/workflows/: custom.rs  mod.rs  planner.rs
src/workflows/code_review/: mod.rs
src/workflows/code_review/agents/: mod.rs  performance.rs  reporter.rs  reviewer.rs  security.rs
src/workflows/code_review/prompts/: performance.md  reporter.md  reviewer.md  security.md
src/workflows/dev/: mod.rs
src/workflows/dev/agents/: ceo.rs  developer.rs  devops.rs  mod.rs  pm.rs  qa.rs  tech_lead.rs
src/workflows/dev/prompts/: ceo.md  developer.md  devops.md  pm.md  qa.md  tech_lead.md
src/workflows/marketing/: mod.rs
src/workflows/marketing/agents/: analyst.rs  copywriter.rs  mod.rs  social_media_manager.rs  strategist.rs
src/workflows/marketing/prompts/: analyst.md  copywriter.md  social_media_manager.md  strategist.md
src/workflows/prospecting/: mod.rs  profile_template.toml
src/workflows/prospecting/agents/: copywriter.rs  mod.rs  outreach_manager.rs  profiler.rs  researcher.rs
src/workflows/prospecting/prompts/: copywriter.md  outreach_manager.md  profiler.md  researcher.md
