[package]
name = "cortex"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core  = "0.35"
tokio     = { version = "1", features = ["full"] }
clap      = { version = "4", features = ["derive"] }
ratatui   = "0.30"
crossterm    = { version = "0.28", features = ["event-stream"] }
tui-input    = "0.10"
futures-util = "0.3"
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"
anyhow      = "1"
dirs        = "5"
async-trait = "0.1"
tokio-util  = { version = "0.7", features = ["rt"] }
reqwest     = { version = "0.12", features = ["json"] }
serde_json  = "1"
lettre      = { version = "0.11", features = ["tokio1-native-tls"] }
