[package]
name = "cortex"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "5.0"
futures-util = "0.3"
rig-core = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tui-input = "0.15"
ratatui = { version = "0.30", features = ["crossterm"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "__tls"] }
toml = "0.8"
arboard = "3"
lettre = { version = "0.11.21", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls", "ring", "webpki-roots"] }
