[package]
name = "cortex"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Beta agentic CLI that orchestrates AI agents to produce complete software projects."
repository = "https://github.com/tky0065/cortex"
homepage = "https://github.com/tky0065/cortex"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "5.0"
futures-util = "0.3"
rig-core = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tui-input = "0.15"
ratatui = { version = "0.30", features = ["crossterm"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream", "__tls"] }
toml = "0.8"
arboard = "3"
lettre = { version = "0.11.21", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls", "ring", "webpki-roots"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.130"
aws-smithy-types = "1.2"
similar = "2"
